fix: Shifted table to its own component

--- a/frontend/src/pages/responseListEvent/ResponseListEvent.css
+++ b/frontend/src/pages/responseListEvent/ResponseListEvent.css
@@ -36,78 +36,6 @@
     cursor: pointer;
 }
 
-.ResponsesListEvent table {
-    width: 90%;
-    margin-inline: 3rem;
-    font-family: 'EB Garamond', 'serif';
-    overflow: scroll;
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
-.ResponsesListEvent table thead * {
-    padding: 1rem 2rem;
-}
-
-.ResponsesListEvent table .headingRow {
-    color: white;
-    font-size: 1.1rem;
-
-}
-
-@media screen and (max-width:900px) {
-    .ResponsesListEvent table * {
-        padding: 1rem 1.75rem;
-    }
-
-    .ResponsesListEvent table .headingRow {
-        font-size: 1rem;
-    }
-}
-
-@media screen and (max-width:820px) {
-    .ResponsesListEvent table * {
-        padding: 1rem 1.25rem;
-    }
-}
-
-@media screen and (max-width:700px) {
-    .ResponsesListEvent table * {
-        padding: 0.5rem 1rem;
-    }
-
-    .ResponsesListEvent table .headingRow {
-        font-size: 0.9rem;
-    }
-}
-
-@media screen and (max-width:600px) {
-    .ResponsesListEvent table * {
-        padding: 0.5rem;
-    }
-
-    .ResponsesListEvent table .headingRow {
-        font-size: 0.9rem;
-    }
-}
-
-.ResponsesListEvent table .headingRow .redGradient {
-    background-image: linear-gradient(0deg, rgba(239, 28, 36, 1) 0%, rgba(137, 16, 21, 1) 100%);
-}
-
-.ResponsesListEvent table .headingRow .darkBlueGradient {
-    background-image: linear-gradient(0deg, rgba(46, 48, 146, 1) 0%, rgba(14, 14, 44, 1) 100%);
-}
-
-.ResponsesListEvent table .headingRow .lightBlueGradient {
-    background-image: linear-gradient(0deg, rgba(0, 174, 239, 1) 0%, rgba(0, 100, 137, 1) 100%);
-}
-
-.ResponsesListEvent table tbody tr {
-    color: black;
-    font-size: 1.15rem;
-    text-align: center;
-}
-
 .ResponsesListEvent .errorMessage {
     margin-inline: 3rem;
     font-family: 'DM Sans', 'sans serif';
